upoading the final project with all its section)

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Start Our Statistique -->
     <section class="our-statistique">
       <div class="container">
-        <h2 class="title">our Statistics</h2>
+        <h2 class="title">Statistics</h2>
         <p>Lorem ipsum ,t ipsa iusto, ipsum culpa. Ipsum voluptates iusto, ipsum culpa. amet repudiandae odit voluptatum itaque ut atque ipsam. ciis.</p>
         <div class="statis-box">
           <div>
@@ -136,8 +136,72 @@
       </div>
     </section>
     <!-- End Our Statistique -->
+    <!-- Start video -->
+    <section class="video">
+      <div class="content">
+        <p>Lorem ipsum dolor sit amshsassumedebitis quia, nesciunt libero officia sequi vel. Beatae, cum! Beatae ab odit quidem?</p>
+        <h2>HERBERT SEMON</h2>
+      </div>
+    </section>
+    <!-- End video -->
+    <!-- Start subscribe -->
+    <section class="subscribe">
+        <div class="container">
+          <h2 class="title">subscribe</h2>
+          <p>Lorem ipsum ,t ipsa iusto, ipsum culpa. Ipsum voluptates iusto, ipsum culpa. amet repudiandae odit voluptatum itaque ut atque ipsam. ciis.</p>
+          <form action="">
+            <input type="email" placeholder="Your email">
+            <input type="submit" value="subscribe">
+          </form>
+        </div>
+    </section>
+    <!-- End subscribe -->
   </main>
   <!-- end main -->
+  <!-- strat footer -->
+  <footer>
+    <div class="container">
+      <div class="col-one">
+        <h3>MUSICOLOGY</h3>
+        <p>Lorem ipsum dolor sit amet sjeal Lorem ipsum dolor consectetur,herl sjeal Lorem ipsum dolor sit amet consectetur eoep dicta id rerum.</p>
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+      </div>
+      <div class="col-two">
+        <h3>ABOUT</h3>
+        <ul>
+          <li>History</li>
+          <li>Our Team</li>
+          <li>Brand Guidelines</li>
+          <li>Terms & Conditions</li>
+          <li>Privacy & policy</li>
+        </ul>
+      </div>
+      <div class="col-three">
+        <h3>Services</h3>
+        <ul>
+          <li>How to Order</li>
+          <li>Our Products</li>
+          <li>Orders Status</li>
+          <li>Promo</li>
+          <li>Paiment Methods</li>
+        </ul>
+      </div>
+      <div class="col-four">
+        <h3>other</h3>
+        <ul>
+          <li>Contact Us</li>
+          <li>Help</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <!-- End footer -->
   <!-- scritpt file -->
   <script src="./js/script.js"></script>
 </body>
